<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoolHosts</string>
	<string name="start_button">一键更新</string>
	<string name="about">关于</string>
	<string name="help">帮助文档</string>
	<string name="updatechversion">检查CoolHosts版本</string>
	<string name="unrooted">CoolHosts尚未获得设备的Root权限</string>
	 <string name="dialog_about"><b>CoolHosts</b>\n\n作者 Find\n\n在新浪微博上关注@FindSpace博客\n\n个人博客： www.findspace.name\n\n邮件： find@findspace.name\n\n感谢点击博客中的广告支持！\n</string>
	<string name="local_version">本地版本：</string>
	<string name="remote_version">服务器版：</string>
	<string name="tempstring"><b>正在获取服务器上的hosts文件…</b>\n若一直显示该信息,请检查网络连接或到博客反馈,为防止恶意抓取,限定了抓取频次.具体请访问博客： www.findspace.name</string>
	<string name="deleteoldhosts">删除旧的hosts文件…</string>
	<string name="deletefailed">删除旧hosts文件失败</string>
	<string name="copyingnewhosts">正在复制新的hosts文件…</string>
	<string name="copysuccess">操作成功！</string>
	<string name="copyfailed">Hosts更新失败@_@</string>
	<string name="neterror">请检查您的网络状态，或者发邮件给我反馈</string>
	<string name="updatechnote">请点击下面的更新下载新版本！</string>
	<string name="emptyhosts">初始化hosts</string>
	<string name="customhostsaddress">自定义hosts</string>
	<string name="customIP">自定义IP</string>
	<string name="catHosts">查看hosts</string>
	<string name="note">该功能正在测试。。。</string>
	<string name="nonewversion">没有发现CoolHosts的新版本。</string>
	<string name="ad">分享给TA</string>
	<string name="more">更多功能</string>
	<string name="downloadhosts">开始下载hosts文件</string>
	<string name="downsuccuess">下载Hosts成功！</string>
	<string name="customhostsaddressnote">Host源已经切换，请点击一键更新进行更新，仅此次有效，重启应用后恢复为默认的findspace.name的源</string>
	<string name="updatehostssuccessed">更新成功</string>
	<string name="updatehostsfailed">更新失败</string>
	<string name="adnote"></string>
	<string name="readfromfile">从文件读</string>
	<string name="readfromfilenote">正在从本地读取hosts，本地hosts文件源地址是：</string>
    <string name="addnewsource">添加新源</string>
    <string name="addnewsourceconfirm">确定</string>
    <string name="share_text">我正在使用CoolHosts一键修改我的hosts，你也试试吧 http://www.findspace.name/easycoding/503 </string>
</resources>
